plugins {
  id 'java'
  id 'java-library'
  id 'jacoco'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
  mavenLocal()
  maven { url 'https://jitpack.io' }
  jcenter()
}

task highLevelDataSetup(type: JavaExec) {
  mainClass = "uk.gov.hmcts.reform.civil.HighLevelDataSetupApp"
  classpath += sourceSets.main.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}


def versions = [
  junit              : '5.10.1',
  junitPlatform      : '1.10.1'
]

ext.libraries = [
  junit5: [
    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
  ]
]

dependencies {
  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.8.0'
  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'

  testImplementation libraries.junit5
}
